--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server -p3001 --watch ./backend/db.json"
+    "server": "json-server -p3001 --watch ./backend/db.json",
+    "start": "node ./backend/index.js"
   },
   "dependencies": {
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.0",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
