--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "json-server -p3001 --watch ./backend/db.json",
-    "start": "node ./backend/index.js"
+    "start": "node ./backend/app.js"
   },
   "dependencies": {
     "axios": "^1.5.0",
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -32,7 +33,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "json-server": "^0.17.3",
-    "typescript": "^5.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   }
 }
