--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["frontend/src"],
+  "include": ["frontend/src", "backend"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
