--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "nodemon ./src/index.ts",
     "start": "node ./dist/index.js"
   },
   "keywords": [],
@@ -21,8 +20,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "jsonfile": "^6.1.0",
-    "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "jsonfile": "^6.1.0"
   }
 }
